fix element overlapping of Header and Banner

--- a/src/styles/common/banner/banner.module.scss
+++ b/src/styles/common/banner/banner.module.scss
@@ -5,6 +5,8 @@
   background-color: var(--main-color);
   text-align: center;
   padding: 3rem;
+  position: relative;
+  top: 5rem;
 }
 
 .banner-content {
